# hollowed_stars

./: .gitignore  LICENSE.md  PLAN.md  README.md  TASKLIST.md  main.py  pyproject.toml
.github/workflows/: release.yml
src/: __init__.py  __main__.py  constants.py  game.py  states.py
src/models/: __init__.py  colony.py  combat.py  diplomacy.py  events.py  galaxy.py  inventory.py  mothership_systems.py  quest.py  save.py  ships.py  weapons.py
src/screens/: __init__.py  captains_log.py  colony_screen.py  combat.py  credits.py  deep_survey.py  diplomacy.py  event_dialog.py  fleet_screen.py  formation_screen.py  mothership.py  ship_select.py  star_map.py  system_view.py  title.py
src/ui/: __init__.py  hud.py  starfield.py
